# age-crypto

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: benchmark.yml  build.yml  coverage.yml  doc.yml  test.yml
.zed/: debug.json
bench/: armor.rs  dc.rs  enc.rs  error.rs  passphrase.rs  recipient.rs  types.rs
benches/: armor.rs  dc.rs  enc.rs  error.rs  passphrase.rs  recipient.rs  types.rs
clib/: Makefile  age-crypto.h  example.c
example/: example_decryption.rs  example_encryption.rs  exmaple_error_handler.rs  exmaple_types_usage.rs  exmaple_use_armor.rs  exmaple_use_passphrase.rs  exmaple_use_recipient.rs  exmaple_user_passphrase_n_armor.rs
src/: ffi.rs  lib.rs  main.rs
src/apis/: decrypt.rs  decrypt_armor.rs  decrypt_with_passphrase.rs  decrypt_with_passphrase_armor.rs  encrypt.rs  encrypt_armor.rs  encrypt_with_passphrase.rs  encrypt_with_passphrase_armor.rs  mod.rs  parse_identity.rs  parse_recipients.rs
src/errors/: decrypt.rs  encrypt.rs  mod.rs
src/types/: armored_data.rs  encrypted_data.rs  mod.rs  passphrase.rs
tests/: api_decrypt.rs  api_decrypt_armor.rs  api_decrypt_with_passphrase.rs  api_decrypt_with_passphrase_armor.rs  api_encrypt.rs  api_encrypt_armor.rs  api_encrypt_with_passphrase.rs  api_encrypt_with_passphrase_armor.rs  api_parse_identity.rs  api_parse_recipients.rs  errors_decrypt.rs  errors_encrypt.rs  types_armored_data.rs  types_encrypted_data.rs  types_passphrase.rs
