[package]
name = "age_crypto"
version = "0.1.0"
edition = "2024"
description = "A safe, ergonomic Rust wrapper around the age encryption library with strong typing, comprehensive error handling, and passphrase support."

[dependencies]
age = { version = "0.11.3", features = ["armor"] }
rand = "0.8"
thiserror = "2.0.18"
zeroize = "1.8.2"

[dev-dependencies]
serde_json = "1.0.149"
age-setup = "0.1.0"
chrono = "0.4.44"
serde = { version = "1.0.228", features = ["derive"] }
